spax.zone link updates and main page redone

--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
     <meta property="og:title" content="That page doesn't exist!">
     <meta property="og:description" content="How did we get here?">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://spiritaxolotl.github.io/images/faces/claire/Dizzy.png" type="image/png">
-    <link rel="icon" href="https://spiritaxolotl.github.io/images/icons/Smirk_Circle.png"></link>
+    <meta property="og:image" content="https://spax.zone/images/faces/claire/Dizzy.png" type="image/png">
+    <link rel="icon" href="https://spax.zone/images/icons/Smirk_Circle.png"></link>
     <!--phucking bootstrap-->
-    <link rel="stylesheet" href="https://spiritaxolotl.github.io/css/bootstrap.min.css">
-    <script src="https://spiritaxolotl.github.io/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://spax.zone/css/bootstrap.min.css">
+    <script src="https://spax.zone/js/bootstrap.min.js"></script>
     <!---->
-    <link rel="stylesheet" href="https://spiritaxolotl.github.io/css/styles.css">
+    <link rel="stylesheet" href="https://spax.zone/css/styles.css">
     <title>404 NOT FOUND LOL!</title>
   </head>
   <body>
@@ -40,7 +40,7 @@
             <img src="
           /images/faces/claire/Sigh.png
             "></img>
-          Anyways, Spax told me to direct you to his <a href=https://spiritaxolotl.github.io/html/main>main page</a>.
+          Anyways, Spax told me to direct you to his <a href=https://spax.zone/html/main>main page</a>.
         </div>
       </div>
       <div class="text-box flex-container unselectable">
