--- a/html/DEPalldialogue.html
+++ b/html/DEPalldialogue.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="All DEP Dialogue">
     <meta property="og:description" content="A dump of all dialogue in Temmie's game &quot;Dweller's Empty Path&quot;.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://spiritaxolotl.github.io/images/faces/yoki/Neutral.png" type="image/png">
+    <meta property="og:image" content="https://spax.zone/images/faces/yoki/Neutral.png" type="image/png">
     <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
     <!--phucking bootstrap-->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -15,7 +15,7 @@
     <script src="/js/textbox.js"></script>
     <!---->
     <link rel="stylesheet" href="/css/styles.css" type=text/css>
-    <link rel="canonical" href="https://spiritaxolotl.github.io/html/DEPalldialogue"/>
+    <link rel="canonical" href="https://spax.zone/html/DEPalldialogue"/>
     <title>All DEP Dialogue</title>
   </head>
   <body>
