--- a/html/MojoArrowAdvice.html
+++ b/html/MojoArrowAdvice.html
@@ -8,13 +8,13 @@
     <meta property="og:description" content="My create project.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="/images/faces/spax/Smirk.png" type="image/png">
-    <link rel="icon" href="https://spiritaxolotl.github.io/images/icons/Smirk_Circle.png"></link>
+    <link rel="icon" href="https://spax.zone/images/icons/Smirk_Circle.png"></link>
     <!--phucking bootstrap-->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <script src="/js/bootstrap.min.js"></script>
     <!---->
     <link rel="stylesheet" href="/css/styles.css" type=text/css>
-    <link rel="canonical" href="https://spiritaxolotl.github.io/html/MojoArrowAdvice"/>
+    <link rel="canonical" href="https://spax.zone/html/MojoArrowAdvice"/>
     <title>Mojo's Arrow Advice!</title>
   </head>
   <body>
@@ -38,7 +38,7 @@
       const frame = document.getElementById('snap');
       frame.contentWindow.postMessage('*', 'https://snap.berkeley.edu');
       window.addEventListener('message', event => {
-        if (event.origin === 'https://spiritaxolotl.github.io') {
+        if (event.origin === 'https://spax.zone') {
           console.log(event.data);
         }
       });
