--- a/html/allspaxfaces.html
+++ b/html/allspaxfaces.html
@@ -7,14 +7,14 @@
     <meta property="og:title" content="All Spax DEP Face Sprites">
     <meta property="og:description" content="A collection of all of the sprites that I made for a tiny gag in the test webpage.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
+    <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
     <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
     <!--phucking bootstrap-->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <script src="/js/bootstrap.min.js"></script>
     <!---->
     <link rel="stylesheet" href="/css/styles.css" type=text/css>
-    <link rel="canonical" href="https://spiritaxolotl.github.io/html/allspaxfaces"/>
+    <link rel="canonical" href="https://spax.zone/html/allspaxfaces"/>
     <title>All of Spax's Face Sprites</title>
   </head>
   <body>
