--- a/html/main.html
+++ b/html/main.html
@@ -9,13 +9,13 @@
     <meta property="og:description" content="I make dumb shit and spend most of my time on the things that don't matter.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="/images/faces/spax/Smirk.png" type="image/png">
-    <link rel="icon" href="https://spiritaxolotl.github.io/images/icons/Smirk_Circle.png"></link>
-    <!--phucking bootstrap-->
+    <link rel="icon" href="https://spax.zone/images/icons/Smirk_Circle.png"></link>
+    <!--phucking bootstrap (remove this in the future)-->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <script src="/js/bootstrap.min.js"></script>
     <!---->
     <link rel="stylesheet" href="/css/styles.css" type=text/css>
-    <link rel="canonical" href="https://spiritaxolotl.github.io/html/main"/>
+    <link rel="canonical" href="https://spax.zone/html/main"/>
     <title>Spax's Site</title>
   </head>
   <body>
@@ -39,7 +39,7 @@
             <img src="
           /images/faces/claire/Happy.png
             "></img>
-          I am now on a poggers website. Woo!
+          I am now on a website. Woo!
         </div>
       </div>
       <div class="text-box flex-container unselectable">
@@ -47,117 +47,34 @@
             <img src="
           /images/faces/claire/Sigh.png
             "></img>
-          Anyways it's time for some fucking debugging.
+          Anyways it's time to refactor pretty much the entire site.
         </div>
       </div>
       <div class="text-box flex-container unselectable">
         <div>
             <img src="
-          /images/faces/aimottle/Unsure.png
+          /images/faces/claire/Look.png
             "></img>
-          Spax, you don't know what you're doing at all, do you?
+          Spax hasn't worked on it in over two years.
         </div>
       </div>
       <div class="text-box flex-container unselectable">
         <div>
             <img src="
-          /images/faces/spax/Worried.png
+          /images/faces/spax/Look.png
             "></img>
-          Well no... but-
+          True...
         </div>
       </div>
       <div class="text-box flex-container unselectable">
         <div>
             <img src="
-          /images/faces/spax/Worried.png
+          /images/faces/spax/Happy.png
             "></img>
-          ...
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Pensive.png
-            "></img>
-        </div>
-      </div>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/aimottle/Neutral.png
-            "></img>
-          HOLY SHIT <span>THEY ACTUALLY FIXED MOST OF THE CODE</span>
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/claire/Aghast.png
-            "></img>
-          How tf-
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Dizzy.png
-            "></img>
-          I have no clue how I did it I'm so tired now
-        </div>
-      </div>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/yoki/Sweat_Drop.png
-            "></img>
-          (I still don't know where the <i>fuck</i> I am-)
-        </div>
-      </div>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <div class="text-box flex-container unselectable">
-        <div>
-            <img src="
-          /images/faces/spax/Disappointed.png
-            "></img>
-          I need to redo this site SO bad.
+          But keep an eye out for some new changes in the next few weeks!
         </div>
       </div>
     </div>
     <script src="/js/scrollparallax.js"></script>
-    <!--
-    //this works; don't fucking touch it kiddo
-    //christ why did I write this
-    //JQUERY???????
-    <div class="text-box flex-container unselectable" id="ominous-countdown"></div>
-    </div>
-    <script type="text/javascript">(function(){window['__CF$cv$params']={r:'6d98c0e03e54c7d5',m:'fYOcFE2KHU8Uamq_CEoNI9GgDqzzTxlgAY8aDwGqMMo-1644196382-0-AdtPtcTeuNBR9RU7N0f1bUSknvAZAZlqUbnsWRsrjxZ3iTvk5j4qWutdSePRK2YPyqC5PUy6SPea/L40oaDl6jvtNjhP7KNm2RByM9wtAspDORing5CA53EOj9d1JmRRi7qHucVUBHLxi4LBzr/iAu4fgwyHD5jNEfDSeP0nowWVBgDFJbFCkoTt6dFuA3CdYQ==',s:[0xeb660911f4,0x789e72129e],}})();</script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="jquery.countdown.min.js"></script>
-    <script>
-      $('#ominous-countdown')
-      .countdown("2022/06/03", function(event) {
-        $(this).text(
-          event.strftime('%D:%H:%M:%S')
-        );
-      });
-    </script>-->
   </body>
 </html>
