--- a/html/mrc3timezones.html
+++ b/html/mrc3timezones.html
@@ -7,15 +7,15 @@
     <meta property="og:title" content="Mods Rush Couples 3 Splixel Timezones">
     <meta property="og:description" content="The timezones of the team members of SpiritAxolotl, Pentaxel, and Splittikin">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
+    <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
     <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
     <!--phucking bootstrap-->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <script src="/js/bootstrap.min.js"></script>
     <!---->
-    <meta http-equiv="Refresh" content="0; url='https://spiritaxolotl.github.io/html/devtimezones'"/>
+    <meta http-equiv="Refresh" content="0; url='https://spax.zone/html/devtimezones'"/>
     <link rel="stylesheet" href="/css/styles.css" type=text/css>
-    <link rel="canonical" href="https://spiritaxolotl.github.io/html/mrc3timezones"/>
+    <link rel="canonical" href="https://spax.zone/html/mrc3timezones"/>
     <title>Mods Rush Couples 3 Splixel Timezones (is now a redirect)</title>
   </head>
   <body>
