--- a/html/rangalshutthehellup.html
+++ b/html/rangalshutthehellup.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Rangal Shut The Hell Up">
     <meta property="og:description" content="A site for when you need rangal to just phucking shut up.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
+    <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
     <link rel="icon" href="/images/faces/claire/Mad.png"></link>
     <title>SHUR UP RANGAK</title>
     <!--NOTE: Those typos are on purpose. I know it's supposed to say "SHUT UP RANGAL" but the typos are funnier imo-->
@@ -16,7 +16,7 @@
     <script src="/js/bootstrap.min.js"></script>
     <!---->
     <link rel="stylesheet" href="/css/styles.css" type=text/css>
-    <link rel="canonical" href="https://spiritaxolotl.github.io/html/rangalshutthehellup"/>
+    <link rel="canonical" href="https://spax.zone/html/rangalshutthehellup"/>
   </head>
   <body>
     <div id="bg">
