--- a/html/spaxDay.html
+++ b/html/spaxDay.html
@@ -64,7 +64,7 @@ haha now it's edited by spax:)
     <script src="/bootstrap.min.js"></script>
     
     <link rel="stylesheet" href="/css/styles.css" type=text/css>
-    <link rel="canonical" href="https://spiritaxolotl.github.io/html/spaxDay"/>
+    <link rel="canonical" href="https://spax.zone/html/spaxDay"/>
     <title>Happy Birthday Spax</title>
     
     <style>
