--- a/redirects/portal.html
+++ b/redirects/portal.html
@@ -7,10 +7,10 @@
     <meta property="og:type" content="website">
     <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
     <!--phucking bootstrap-->
-    <link rel="stylesheet" href="https://spiritaxolotl.github.io/css/bootstrap.min.css">
-    <script src="https://spiritaxolotl.github.io/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://spax.zone/css/bootstrap.min.css">
+    <script src="https://spax.zone/js/bootstrap.min.js"></script>
     <!---->
-    <link rel="stylesheet" href="https://spiritaxolotl.github.io/css/styles.css" type=text/css>
+    <link rel="stylesheet" href="https://spax.zone/css/styles.css" type=text/css>
     <link rel="canonical" href="portal"/>
     <!--<meta http-equiv="Refresh" content="0; url='hmm?'"/>-->
     <title>.gg/xbmJZptFXC</title>
@@ -40,7 +40,7 @@
                 <img src="
               /images/faces/claire/Sigh.png
                 "></img>
-              Anyways, Spax told me to direct you to his <a href=https://spiritaxolotl.github.io/html/main>main page</a>.
+              Anyways, Spax told me to direct you to his <a href=https://spax.zone/html/main>main page</a>.
             </div>
           </div>
           <div class="text-box flex-container unselectable">
