--- a/redirects/ratspin.html
+++ b/redirects/ratspin.html
@@ -7,10 +7,10 @@
     <meta property="og:type" content="website">
     <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
     <!--phucking bootstrap-->
-    <link rel="stylesheet" href="https://spiritaxolotl.github.io/css/bootstrap.min.css">
-    <script src="https://spiritaxolotl.github.io/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://spax.zone/css/bootstrap.min.css">
+    <script src="https://spax.zone/js/bootstrap.min.js"></script>
     <!---->
-    <link rel="stylesheet" href="https://spiritaxolotl.github.io/css/styles.css" type=text/css>
+    <link rel="stylesheet" href="https://spax.zone/css/styles.css" type=text/css>
     <link rel="canonical" href="ratspin"/>
     <meta http-equiv="Refresh" content="0; url='https://cdn.discordapp.com/attachments/1001605563999850559/1009287729747595384/optimized-spinning-rat.gif'"/>
     <title>Redirect Go brrrrr</title>
