--- a/html/changelog.html
+++ b/html/changelog.html
@@ -7,14 +7,14 @@
     <meta property="og:title" content="All Spax DEP Face Sprites">
     <meta property="og:description" content="Manually documenting major changes to the site.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
+    <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
     <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
     <!--phucking bootstrap-->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <script src="/js/bootstrap.min.js"></script>
     <!---->
     <link rel="stylesheet" href="/css/styles.css" type=text/css>
-    <link rel="canonical" href="https://spiritaxolotl.github.io/html/changelog"/>
+    <link rel="canonical" href="https://spax.zone/html/changelog"/>
     <title>Changelog</title>
   </head>
   <body>
