--- a/html/contactme.html
+++ b/html/contactme.html
@@ -7,14 +7,14 @@
     <meta property="og:title" content="Is Spax Currently At School?">
     <meta property="og:description" content="See if I'm currently at school or not!">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
+    <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
     <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
     <!--phucking bootstrap-->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <script src="/js/bootstrap.min.js"></script>
     <!---->
     <link rel="stylesheet" href="/css/styles.css" type=text/css>
-    <link rel="canonical" href="https://spiritaxolotl.github.io/html/contactme"/>
+    <link rel="canonical" href="https://spax.zone/html/contactme"/>
     <title>Contact Me While I'm In School!</title>
   </head>
   <body>
