--- a/html/fanart.html
+++ b/html/fanart.html
@@ -10,14 +10,14 @@
     <meta property="og:title" content="Spax Fanart">
     <meta property="og:description" content="A collection of all official/fanworks of my characters &quot;Spax&quot; and &quot;Nahua&quot;.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
+    <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
     <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
     <!--phucking bootstrap-->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <script src="/js/bootstrap.min.js"></script>
     <!---->
     <link rel="stylesheet" href="/css/styles.css" type=text/css>
-    <link rel="canonical" href="https://spiritaxolotl.github.io/html/art"/>
+    <link rel="canonical" href="https://spax.zone/html/art"/>
     <title>Spax Fanart</title>
   </head>
   <body>
