--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -7,14 +7,14 @@
     <meta property="og:title" content="Nahua &quot;Ref&quot; Sheet">
     <meta property="og:description" content="A collection of refs for Nahua!">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
+    <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
     <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
     <!--phucking bootstrap-->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <script src="/js/bootstrap.min.js"></script>
     <!---->
     <link rel="stylesheet" href="/css/styles.css" type=text/css>
-    <link rel="canonical" href="https://spiritaxolotl.github.io/html/nahua-ref-sheet"/>
+    <link rel="canonical" href="https://spax.zone/html/nahua-ref-sheet"/>
     <title>Nahua &quot;Ref&quot; Sheet</title>
   </head>
   <body>
