--- a/html/plannedchanges.html
+++ b/html/plannedchanges.html
@@ -7,14 +7,14 @@
     <meta property="og:title" content="All Spax DEP Face Sprites">
     <meta property="og:description" content="All of the changes that I'm planning on making for the website soon!">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
+    <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
     <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
     <!--phucking bootstrap-->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <script src="/js/bootstrap.min.js"></script>
     <!---->
     <link rel="stylesheet" href="/css/styles.css" type=text/css>
-    <link rel="canonical" href="https://spiritaxolotl.github.io/html/plannedchanges"/>
+    <link rel="canonical" href="https://spax.zone/html/plannedchanges"/>
     <title>All of Spax's Face Sprites</title>
   </head>
   <body>
@@ -209,7 +209,7 @@
             <img src="
           /images/faces/spax/Neutral.png
             "></img>
-          Anyways, thank you for taking the time to read about my silly big ideas for this webpage. I'll update this site like every week or so, and I'll put the outdated ones into a folder on the <a href="https://github.com/SpiritAxolotl/spiritaxolotl.github.io">github repo</a>, so you can see the history there. 
+          Anyways, thank you for taking the time to read about my silly big ideas for this webpage. I'll update this site like every week or so, and I'll put the outdated ones into a folder on the <a href="https://github.com/SpiritAxolotl/spax.zone">github repo</a>, so you can see the history there. 
         </div>
       </div>
       <div class="text-box flex-container unselectable">
