--- a/html/sitelist.html
+++ b/html/sitelist.html
@@ -8,14 +8,14 @@
     <meta property="og:title" content="Spax's Site List">
     <meta property="og:description" content="A place that links every public page currently on my website!">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png">
+    <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png">
     <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
     <!--phucking bootstrap-->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <script src="/js/bootstrap.min.js"></script>
     <!---->
     <link rel="stylesheet" href="/css/styles.css" type=text/css>
-    <link rel="canonical" href="https://spiritaxolotl.github.io/html/sitelist"/>
+    <link rel="canonical" href="https://spax.zone/html/sitelist"/>
     <title>Spax's Site List</title>
   </head>
   <body>
