--- a/html/spaxARG.html
+++ b/html/spaxARG.html
@@ -9,14 +9,14 @@
     <meta property="og:title" content="Spax ARG">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
+    <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
     <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
     <!--phucking bootstrap-->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <script src="/js/bootstrap.min.js"></script>
     <!---->
     <link rel="stylesheet" href="/css/styles.css" type=text/css>
-    <link rel="canonical" href="https://spiritaxolotl.github.io/html/spaxARG"/>
+    <link rel="canonical" href="https://spax.zone/html/spaxARG"/>
     
     <meta http-equiv="Refresh" content="0; url='https://www.timeanddate.com/countdown/generic?iso=20220715T12&p0=419&msg=Spax+ARG&font=sanserif&csz=1'"/>
     <title>Spax's Site</title>
