--- a/html/spaxDay2.html
+++ b/html/spaxDay2.html
@@ -16,13 +16,13 @@
     <meta property="og:description" content="I make dumb shit and spend most of my time on the things that don't matter.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="/images/faces/spax/Smirk.png" type="image/png">
-    <link rel="icon" href="https://spiritaxolotl.github.io/images/icons/Smirk_Circle.png"></link>
+    <link rel="icon" href="https://spax.zone/images/icons/Smirk_Circle.png"></link>
     <!--phucking bootstrap-->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <script src="/js/bootstrap.min.js"></script>
     <!---->
     <link rel="stylesheet" href="/css/styles.css" type=text/css>
-    <link rel="canonical" href="https://spiritaxolotl.github.io/html/main"/>
+    <link rel="canonical" href="https://spax.zone/html/main"/>
     <title>Spax's Site</title>
   </head>
   <body>
