--- a/tests/horse.html
+++ b/tests/horse.html
@@ -23,20 +23,31 @@
       justify-content: center;
       align-items: center;
     }
-    * {
+    /** {
       font-family: Twemoji, Arial;
-    }
+    }*/
     #horsebutton {
       font-size: 3em;
       padding: 0.5em 1em;
       cursor: pointer;
+    }
+    img.emoji {
+      height: 1em;
+      width: 1em;
+      margin: 0 .05em 0 .1em;
+      vertical-align: -0.1em;
     }
   </style>
 </head>
 <body>
   <button id="horsebutton">🐴</button>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
 <script>
+twemoji.parse(document.body, {
+  folder: 'svg',
+  ext: '.svg'
+});
 async function checkProtocol(domain) {
   let http = false;
   let https = false;
