--- a/tests/horse.html
+++ b/tests/horse.html
@@ -34,7 +34,7 @@
     #horsebutton {
       font-size: 3em;
       padding: 0.5em 1em;
-      border: black solid;
+      border: 0.075em solid black;
       border-radius: 0.2em;
       background-color: #eee;
       cursor: pointer;
