--- a/tests/horse.html
+++ b/tests/horse.html
@@ -18,20 +18,19 @@
         url("../fonts/Twemoji.otf") format("opentype"),
         url(https://spax.zone/fonts/Twemoji.otf) format("opentype");
     }
+    html {
+      background-color: #c1694f;
+    }
     body {
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: #c1694f;
       height: 100vh;
       width: 100vw;
       margin: 0;
       overscroll-behavior: none;
       flex-direction: column;
     }
-    /** {
-      font-family: Twemoji, Arial;
-    }*/
     #horsebutton {
       font-size: 3em;
       padding: 0.5em 1em;
