theme color update and minor changes

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="theme-color" content="#306850">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="All Spax DEP Face Sprites">
     <meta property="og:description" content="Manually documenting major changes to the site.">
@@ -22,7 +23,8 @@
       <div class="text-box long-flex-container unselectable" style="text-align: center;">
         <div>
           <span class="large">- Changelog -<br>
-          Manually documenting major changes to the site<br></span>
+          Manually documenting major changes to the site<br>
+          SEVERELY OUTDATED. Check the <a href="https://github.com/SpiritAxolotl/spiritaxolotl.github.io/commits">GitHub</a> instead.</span>
           <br>
         </div>
       </div>
