--- a/html/spaxDay.html
+++ b/html/spaxDay.html
@@ -10,6 +10,7 @@ haha now it's edited by spax:)
 <!DOCTYPE HTML>
 <html manifest="manifest">
   <head>
+    <meta name="theme-color" content="#306850">
     <link rel="preload" href="/images/faces/claire/Neutral.png" as="image">
     <link rel="preload" href="/images/faces/claire/Happy.png" as="image">
     <link rel="preload" href="/images/faces/claire/Sigh.png" as="image">
