--- a/html/MojoArrowAdvice.html
+++ b/html/MojoArrowAdvice.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="theme-color" content="#306850">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Mojo's Arrow Advice!">
     <meta property="og:description" content="My create project.">
