--- a/html/allspaxfaces.html
+++ b/html/allspaxfaces.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="theme-color" content="#306850">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="All Spax DEP Face Sprites">
     <meta property="og:description" content="A collection of all of the sprites that I made for a tiny gag in the test webpage.">
