--- a/html/devtimezones.html
+++ b/html/devtimezones.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="theme-color" content="#306850">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Website Dev Timezone List">
     <meta property="og:description" content="The timezones of the team members of Spax, Mathew, and Calm.">
