--- a/html/isspaxatschool.html
+++ b/html/isspaxatschool.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="theme-color" content="#306850">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Is Spax Currently At School?">
     <meta property="og:description" content="See if I'm currently at school or not!">
