--- a/html/main.html
+++ b/html/main.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="theme-color" content="#306850">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="Spax, SpiritAxolotl, spiritaxolotl, spirit, axolotl, axolotls, youtube">
-    <meta property="og:title" content="Spax's Site">
-    <meta property="og:description" content="I make dumb shit and spend most of my time on the things that don't matter.">
+    <meta property="og:title" content="spax.zone">
+    <meta property="og:description" content="webbed site">
     <meta property="og:type" content="website">
     <meta property="og:image" content="/images/faces/spax/Smirk.png" type="image/png">
     <link rel="icon" href="https://spax.zone/images/icons/Smirk_Circle.png"></link>
