--- a/html/plannedchanges.html
+++ b/html/plannedchanges.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="theme-color" content="#306850">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="All Spax DEP Face Sprites">
     <meta property="og:description" content="All of the changes that I'm planning on making for the website soon!">
