--- a/html/rangalshutthehellup.html
+++ b/html/rangalshutthehellup.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="theme-color" content="#306850">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Rangal Shut The Hell Up">
     <meta property="og:description" content="A site for when you need rangal to just phucking shut up.">
