--- a/html/spaxDay2.html
+++ b/html/spaxDay2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html manifest="manifest">
   <head>
+    <meta name="theme-color" content="#306850">
     <!--written entirely by calmbubbles-->
     <link rel="preload" href="https://calmbubbles.github.io/zerasGift/img/gift.png" as="image">
     
