--- a/tests/horse.html
+++ b/tests/horse.html
@@ -9,7 +9,7 @@
   <meta property="og:description" content="Press it if you dare">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://spax.zone/images/misc/horse.png" type="image/png">
-  <link rel="icon" href="/images/misc/horse.png"></link>
+  <link rel="icon" href="/images/misc/horse.png">
   <title>The Horse Button™</title>
   <style>
     @font-face {
@@ -97,8 +97,7 @@
   <h1>The Horse Button™</h1>
   <button id="horsebutton" title="The Horse Button™"><div>🐴</div></button>
   <p>Please click <span class="glow">The Horse Button™</span> at your own risk.</p>
-</body>
-<script src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
 <script>
 twemoji.parse(document.body, {
   folder: "svg",
@@ -165,4 +164,5 @@ document.getElementById("horsebutton").onclick = function() {
     .catch(error => console.error("Error:", error));*/
 }
 </script>
+</body>
 </html>
