update that one instance of the old repo name I guess

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -24,7 +24,7 @@
         <div>
           <span class="large">- Changelog -<br>
           Manually documenting major changes to the site<br>
-          SEVERELY OUTDATED. Check the <a href="https://github.com/SpiritAxolotl/spiritaxolotl.github.io/commits">GitHub</a> instead.</span>
+          SEVERELY OUTDATED. Check the <a href="https://github.com/SpiritAxolotl/spax.zone/commits">GitHub</a> instead.</span>
           <br>
         </div>
       </div>
