--- a/html/main.html
+++ b/html/main.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="Spax, SpiritAxolotl, spiritaxolotl, spirit, axolotl, axolotls, youtube">
     <meta property="og:title" content="spax.zone">
-    <meta property="og:description" content="webbed site">
+    <meta property="og:description" content="a webbed site for a webbed creachure">
     <meta property="og:type" content="website">
     <meta property="og:image" content="/images/faces/spax/Smirk.png" type="image/png">
     <link rel="icon" href="https://spax.zone/images/icons/Smirk_Circle.png"></link>
-    <!--phucking bootstrap (remove this in the future)-->
+    <!--bootstrap (remove this in the future)-->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <script src="/js/bootstrap.min.js"></script>
     <!---->
