--- a/html/resources.html
+++ b/html/resources.html
@@ -13,7 +13,7 @@
     <!--<meta http-equiv="Refresh" content="0; url='sitelist'"/>-->
     <!---->
     <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
-    <!--phucking bootstrap-->
+    <!--bootstrap-->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <script src="/js/bootstrap.min.js"></script>
     <!---->
