--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://spax.zone/images/faces/claire/Dizzy.png" type="image/png">
     <link rel="icon" href="https://spax.zone/images/icons/Smirk_Circle.png"></link>
-    <!--phucking bootstrap-->
+    <!--bootstrap-->
     <link rel="stylesheet" href="https://spax.zone/css/bootstrap.min.css">
     <script src="https://spax.zone/js/bootstrap.min.js"></script>
     <!---->
