--- a/redirects/ratspin.html
+++ b/redirects/ratspin.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:type" content="website">
     <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
-    <!--phucking bootstrap-->
+    <!--bootstrap-->
     <link rel="stylesheet" href="https://spax.zone/css/bootstrap.min.css">
     <script src="https://spax.zone/js/bootstrap.min.js"></script>
     <!---->
